--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 	<meta name="author" content="Muhammad Morshed">
 
-	<title>Meghna | Responsive Multipurpose Parallax HTML5 Template</title>
+	<title>CoputerFixs | Creamos tu sitio web ideal.</title>
 
 	<!-- Mobile Specific Meta
 		================================================== -->
@@ -64,21 +64,74 @@
 Welcome Slider
 ==================================== -->
 
-<section class="hero-area overlay" style="background-image: url('images/banner/hero-area.jpg');">
-	<!-- <video autoplay muted loop class="hero-video">
-		<source src="images/banner/hero-video.mp4" type="video/mp4">
-	</video> -->
-	<div class="block">
-		<div class="video-button">
-			<a class="popup-video" href="https://www.youtube.com/watch?v=jrkvirglgaQ">
-				<i class="tf-ion-play"></i>
-		</a>
-		</div>
-		<h1>Experience the new reality</h1>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!</p>
-		<a data-scroll href="#services" class="btn btn-transparent">Explore Us</a>
-	</div>
-</section>
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <ol class="carousel-indicators">
+      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+      <li data-target="#myCarousel" data-slide-to="1"></li>
+      <li data-target="#myCarousel" data-slide-to="2"></li>
+    </ol>
+    <div class="carousel-inner">
+      <div class="item bg bg1 active">
+		<section class="hero-area overlay" style="background-image: url('images/banner/hero-area.jpg');">
+			<!-- <video autoplay muted loop class="hero-video">
+				<source src="images/banner/hero-video.mp4" type="video/mp4">
+			</video> -->
+			<div class="block">
+				<div class="video-button">
+					<a class="popup-video" href="https://www.youtube.com/watch?v=jrkvirglgaQ">
+						<i class="tf-ion-play"></i>
+				</a>
+				</div>
+				<h1>Experience the new reality</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!</p>
+				<a data-scroll href="#services" class="btn btn-transparent">Explore Us</a>
+			</div>
+		</section>
+		
+      </div>
+      <div class="item bg bg2">
+		<section class="hero-area overlay" style="background-image: url('images/banner/hero-area.jpg');">
+			<!-- <video autoplay muted loop class="hero-video">
+				<source src="images/banner/hero-video.mp4" type="video/mp4">
+			</video> -->
+			<div class="block">
+				<div class="video-button">
+					<a class="popup-video" href="https://www.youtube.com/watch?v=jrkvirglgaQ">
+						<i class="tf-ion-play"></i>
+				</a>
+				</div>
+				<h1>Experience the new reality</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!</p>
+				<a data-scroll href="#services" class="btn btn-transparent">Explore Us</a>
+			</div>
+		</section>
+		
+      </div>
+      <div class="item bg bg1">
+		<section class="hero-area overlay" style="background-image: url('images/banner/hero-area.jpg');">
+			<!-- <video autoplay muted loop class="hero-video">
+				<source src="images/banner/hero-video.mp4" type="video/mp4">
+			</video> -->
+			<div class="block">
+				<div class="video-button">
+					<a class="popup-video" href="https://www.youtube.com/watch?v=jrkvirglgaQ">
+						<i class="tf-ion-play"></i>
+				</a>
+				</div>
+				<h1>Experience the new reality</h1>
+				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.  Fugit, excepturi. At recusandae sit perferendis autem,iste tempora nostrum numquam sapiente!</p>
+				<a data-scroll href="#services" class="btn btn-transparent">Explore Us</a>
+			</div>
+		</section>
+		
+      </div>
+    </div>
+    <a class="left carousel-control" href="#myCarousel" data-slide="prev"><span class="glyphicon glyphicon-chevron-left"></span></a>
+    <a class="right carousel-control" href="#myCarousel" data-slide="next"><span class="glyphicon glyphicon-chevron-right"></span></a>
+  </div>
+
+
 
  <!-- 
   Fixed Navigation
