--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ Start Call To Action
 					<div class="service-icon text-center">
 						<i class="tf-globe"></i>
 					</div>
-					<h3>WordPress Theme</h3>
+					<h3>Creacion de contenido digital</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
 			</article>
@@ -337,7 +337,7 @@ Start Call To Action
 					<div class="service-icon text-center">
 						<i class="tf-ion-laptop"></i>
 					</div>
-					<h3>Responsive Design</h3>
+					<h3>Desarrollo web</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
 			</article>
@@ -349,7 +349,7 @@ Start Call To Action
 					<div class="service-icon text-center">
 						<i class="tf-genius"></i>
 					</div>
-					<h3>Media &amp; Advertisement</h3>
+					<h3>Manejo de redes sociales</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
 			</article>
@@ -361,7 +361,7 @@ Start Call To Action
 					<div class="service-icon text-center">
 						<i class="tf-dial"></i>
 					</div>
-					<h3>Graphic Design</h3>
+					<h3>Mantenimiento</h3>
 					<p>Lorem ipsum dolor sit amet, consectetur.. Sed id lorem eget orci dictum facilisis vel id tellus. Nullam iaculis arcu at mauris dapibus consectetur.</p>
 				</div>
 			</article>
