--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ Welcome Slider
 				
 					<!-- section title -->
 					<div class="title text-center wow fadeIn" data-wow-duration="1500ms" >
-						<h2>About <span class="color">Us</span> </h2>
+						<h2>Más sobre <span class="color">Nosotros</span> </h2>
 						<div class="border"></div>
 					</div>
 					<!-- /section title -->
