--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ Welcome Slider
     </ol>
     <div class="carousel-inner">
       <div class="item bg bg1 active">
-		<section class="hero-area overlay" style="background-image: url('images/banner/hero-area.jpg');">
+		<section class="hero-area overlay" style="background-image: url('images/banner/hero-area2.jpg');">
 			<!-- <video autoplay muted loop class="hero-video">
 				<source src="images/banner/hero-video.mp4" type="video/mp4">
 			</video> -->
@@ -109,7 +109,7 @@ Welcome Slider
 		
       </div>
       <div class="item bg bg1">
-		<section class="hero-area overlay" style="background-image: url('images/banner/hero-area.jpg');">
+		<section class="hero-area overlay" style="background-image: url('images/banner/hero-area3.jpg');">
 			<!-- <video autoplay muted loop class="hero-video">
 				<source src="images/banner/hero-video.mp4" type="video/mp4">
 			</video> -->
@@ -894,13 +894,14 @@ Start Our Team
 							<!-- plan name & value -->
 							<div class="price-title">
 								<h3>Manejo de <br> redes sociales</h3>
-								<p><strong class="value">$199</strong/>/ mes</p>
+								<p><strong class="value">$1200</strong/>/ mes</p>
 							</div>
 							<!-- /plan name & value -->
 							
 							<!-- plan description -->
 							<ul>
 								<li>1 video por semana</li>
+								<li>3 historias por semana</li>
 								<li>3 flyers por semana</li>
 								<li>Publicamos el contenido</li>
 								<li>1000 likes nuevos</li>
