--- a/index.html
+++ b/index.html
@@ -1267,11 +1267,13 @@ Start Our Team
 	</div> <!-- end container -->
 	
 	<!-- Google Map -->
-	<div class="google-map">
-		<div id="map-canvas"></div>
-	</div>	
-	<!-- /Google Map -->
-	
+	<div class='wow slideInLeft map-me'>
+		<div id='map'>
+		 <iframe allowfullscreen='' height='450' loading='lazy' src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3748.353453821302!2d-98.78128334908389!3d20.03563272624552!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1a116d0a4525f%3A0x6e084c93b25efc28!2sCoputerFixs!5e0!3m2!1ses-419!2smx!4v1675820307941!5m2!1ses-419!2smx' style='border:0;' width='600'></iframe>
+		 <!-- /Google Map -->
+		</div>
+		</div>
+		
 </section> <!-- end section -->
 	
 
@@ -1350,8 +1352,7 @@ Start Our Team
 		<script type="text/javascript" src="plugins/smooth-scroll/dist/js/smooth-scroll.min.js"></script>
 		<!-- Magnific popup -->
 		<script type="text/javascript" src="plugins/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
-		<!-- Google Map API -->
-		<script type="text/javascript"  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script>
+		
 		<!-- Sticky Nav -->
 		<script type="text/javascript" src="plugins/Sticky/jquery.sticky.js"></script>
 		<!-- Number Counter Script -->
