--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ Welcome Slider
 			</video> -->
 			<div class="block">
 				<div class="video-button">
-					<a class="popup-video" href="https://www.youtube.com/watch?v=jrkvirglgaQ">
+					<a class="popup-video" href="">
 						<i class="tf-ion-play"></i>
 				</a>
 				</div>
@@ -105,7 +105,7 @@ Welcome Slider
 			</video> -->
 			<div class="block">
 				<div class="video-button">
-					<a class="popup-video" href="https://www.youtube.com/watch?v=jrkvirglgaQ">
+					<a class="popup-video" href="">
 						<i class="tf-ion-play"></i>
 				</a>
 				</div>
@@ -123,7 +123,7 @@ Welcome Slider
 			</video> -->
 			<div class="block">
 				<div class="video-button">
-					<a class="popup-video" href="https://www.youtube.com/watch?v=jrkvirglgaQ">
+					<a class="popup-video" href="">
 						<i class="tf-ion-play"></i>
 				</a>
 				</div>
