--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="description" content="Meghna One page parallax responsive HTML Template ">
+	<meta name="description" content="CoputerFixs Agencia de marketing digital profesional">
 
-	<meta name="author" content="Muhammad Morshed">
+	<meta name="author" content="Hector Origel">
 
 	<title>CoputerFixs | Creamos tu sitio web ideal.</title>
 
